worked on user registeration and login

--- a/posts/templates/posts/posts_page.html
+++ b/posts/templates/posts/posts_page.html
@@ -8,15 +8,16 @@
 {% block content %}
 
 <section>
+
+    <img class="banner"  src="{{post.banner.url}}" alt="{{post.title}}">
+
     <h1>{{post.title}}</h1>
 
 
-    <article class="posts">
 
 
         <p>{{post.date}}</p>
 
         <p>{{post.slug}}</p>
-    </article>
 </section>
 {% endblock  %}
