--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,9 +11,12 @@
   </head>
   <body>
     <nav>
-      <a href="/">Home</a>
+      <a href="/"><span title="Home">Home</span></a>
       <a href="/about">About</a>
       <a href="{% url 'posts:list' %}">Posts</a>
+
+      <a href="{% url 'users:register' %}">Register</a>
+      <a href="{% url 'users:login' %}">Login</a>
     </nav>
 
     <main>{% block content %} {% endblock %}</main>
